# titanic_survival

./: pyproject.toml
notebooks/: titanic_survival_prediction.ipynb  titanic_tutorial_3.ipynb
notebooks/.ipynb_checkpoints/: titanic_survival_prediction-checkpoint.ipynb  titanic_survival_tutorial-checkpoint.ipynb  titanic_survival_tutorial_2-checkpoint.ipynb  titanic_tutorial_3-checkpoint.ipynb
