[tool.poetry]
name = "titanic-survival"
version = "0.1.0"
description = ""
authors = ["Andre Hamm <andre@originrose.com>"]
readme = "README.md"
packages = [{include = "titanic_survival"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^1.24.2"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
